fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 0px;
+  width: 5px;
 }
 
 *::-webkit-scrollbar-track {
@@ -21,7 +21,7 @@
   background-color: rgb(107, 107, 198);
 
   border-radius: 14px;
-  border: 3px solid var(--primary);
+  /* border: 3px solid var(--primary); */
 }
 
 .apexcharts-yaxis-texts-g {
